--- a/asmcomp/s390x/BUILD.bazel
+++ b/asmcomp/s390x/BUILD.bazel
@@ -1,16 +1,14 @@
+load("//asmcomp:BUILD_RULES.bzl", "cvt_emit")
+
 exports_files([
     "arch.ml", "CSE.ml", "proc.ml",
     "reload.ml", "scheduling.ml", "selection.ml"
 ])
 
-genrule(
+cvt_emit(
     name = "emit_ml",
-    srcs = ["emit.mlp", "//tools:cvt_emit.exe"],
-    outs = ["emit.ml"],
-    tools = ["//boot/baseline:ocamlrun"], ## fixme: find a way to use the toolchain
-    cmd  = "\n".join([
-	    "echo '# 1 \"s390x/emit.mlp\"' > $@;",
-        "$(execpath //boot/baseline:ocamlrun) $(location //tools:cvt_emit.exe) < $(location :emit.mlp) >> $@"
-    ]),
+    src  = "emit.mlp",
+    out  = "emit.ml",
     visibility = ["//asmcomp:__pkg__"]
 )
+
